// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilterPicker should match FilterPicker base snapshot. 1`] = `
initialize {
  "0": Node {
    "attribs": Object {
      "class": "gio-btn gio-btn-text gio-btn-small gio-btn-icon-only",
      "style": "cursor:pointer",
      "type": "button",
    },
    "children": Array [
      Node {
        "attribs": Object {
          "aria-label": "filter-outlined",
          "class": "gio-icon",
          "role": "img",
        },
        "children": Array [
          Node {
            "attribs": Object {
              "fill": "currentColor",
              "height": "14px",
              "viewBox": "0 0 14 14",
              "width": "14px",
              "xmlns": "http://www.w3.org/2000/svg",
            },
            "children": Array [
              Node {
                "attribs": Object {},
                "children": Array [
                  Node {
                    "attribs": Object {},
                    "children": Array [],
                    "name": "style",
                    "namespace": "http://www.w3.org/2000/svg",
                    "next": null,
                    "parent": [Circular],
                    "prev": null,
                    "type": "style",
                    "x-attribsNamespace": Object {},
                    "x-attribsPrefix": Object {},
                  },
                ],
                "name": "defs",
                "namespace": "http://www.w3.org/2000/svg",
                "next": Node {
                  "attribs": Object {},
                  "children": Array [
                    Node {
                      "attribs": Object {},
                      "children": Array [
                        Node {
                          "attribs": Object {
                            "d": "M6 6.46L5.56 6zM7.5 13a.51.51 0 00.5-.5V6.86a1 1 0 01.28-.69l4.16-4.32a.55.55 0 00.1-.55.51.51 0 00-.46-.3H1.92a.51.51 0 00-.46.3.53.53 0 00.1.55l4 4.15.16.17a1 1 0 01.28.69v5.64a.51.51 0 00.5.5zM9 13a1 1 0 01-1 1H6a1 1 0 01-1-1V7.28a1 1 0 00-.27-.69L.89 2.53A1.5 1.5 0 012 0h10a1.5 1.5 0 011.09 2.53L9.27 6.59a1 1 0 00-.27.69z",
                            "fill": "currentColor",
                            "fill-rule": "evenodd",
                            "id": "filter-outlined_svg__filter",
                          },
                          "children": Array [],
                          "name": "path",
                          "namespace": "http://www.w3.org/2000/svg",
                          "next": null,
                          "parent": [Circular],
                          "prev": null,
                          "type": "tag",
                          "x-attribsNamespace": Object {
                            "d": undefined,
                            "fill": undefined,
                            "fill-rule": undefined,
                            "id": undefined,
                          },
                          "x-attribsPrefix": Object {
                            "d": undefined,
                            "fill": undefined,
                            "fill-rule": undefined,
                            "id": undefined,
                          },
                        },
                      ],
                      "name": "g",
                      "namespace": "http://www.w3.org/2000/svg",
                      "next": null,
                      "parent": [Circular],
                      "prev": null,
                      "type": "tag",
                      "x-attribsNamespace": Object {},
                      "x-attribsPrefix": Object {},
                    },
                  ],
                  "name": "g",
                  "namespace": "http://www.w3.org/2000/svg",
                  "next": null,
                  "parent": [Circular],
                  "prev": [Circular],
                  "type": "tag",
                  "x-attribsNamespace": Object {},
                  "x-attribsPrefix": Object {},
                },
                "parent": [Circular],
                "prev": null,
                "type": "tag",
                "x-attribsNamespace": Object {},
                "x-attribsPrefix": Object {},
              },
              Node {
                "attribs": Object {},
                "children": Array [
                  Node {
                    "attribs": Object {},
                    "children": Array [
                      Node {
                        "attribs": Object {
                          "d": "M6 6.46L5.56 6zM7.5 13a.51.51 0 00.5-.5V6.86a1 1 0 01.28-.69l4.16-4.32a.55.55 0 00.1-.55.51.51 0 00-.46-.3H1.92a.51.51 0 00-.46.3.53.53 0 00.1.55l4 4.15.16.17a1 1 0 01.28.69v5.64a.51.51 0 00.5.5zM9 13a1 1 0 01-1 1H6a1 1 0 01-1-1V7.28a1 1 0 00-.27-.69L.89 2.53A1.5 1.5 0 012 0h10a1.5 1.5 0 011.09 2.53L9.27 6.59a1 1 0 00-.27.69z",
                          "fill": "currentColor",
                          "fill-rule": "evenodd",
                          "id": "filter-outlined_svg__filter",
                        },
                        "children": Array [],
                        "name": "path",
                        "namespace": "http://www.w3.org/2000/svg",
                        "next": null,
                        "parent": [Circular],
                        "prev": null,
                        "type": "tag",
                        "x-attribsNamespace": Object {
                          "d": undefined,
                          "fill": undefined,
                          "fill-rule": undefined,
                          "id": undefined,
                        },
                        "x-attribsPrefix": Object {
                          "d": undefined,
                          "fill": undefined,
                          "fill-rule": undefined,
                          "id": undefined,
                        },
                      },
                    ],
                    "name": "g",
                    "namespace": "http://www.w3.org/2000/svg",
                    "next": null,
                    "parent": [Circular],
                    "prev": null,
                    "type": "tag",
                    "x-attribsNamespace": Object {},
                    "x-attribsPrefix": Object {},
                  },
                ],
                "name": "g",
                "namespace": "http://www.w3.org/2000/svg",
                "next": null,
                "parent": [Circular],
                "prev": Node {
                  "attribs": Object {},
                  "children": Array [
                    Node {
                      "attribs": Object {},
                      "children": Array [],
                      "name": "style",
                      "namespace": "http://www.w3.org/2000/svg",
                      "next": null,
                      "parent": [Circular],
                      "prev": null,
                      "type": "style",
                      "x-attribsNamespace": Object {},
                      "x-attribsPrefix": Object {},
                    },
                  ],
                  "name": "defs",
                  "namespace": "http://www.w3.org/2000/svg",
                  "next": [Circular],
                  "parent": [Circular],
                  "prev": null,
                  "type": "tag",
                  "x-attribsNamespace": Object {},
                  "x-attribsPrefix": Object {},
                },
                "type": "tag",
                "x-attribsNamespace": Object {},
                "x-attribsPrefix": Object {},
              },
            ],
            "name": "svg",
            "namespace": "http://www.w3.org/2000/svg",
            "next": null,
            "parent": [Circular],
            "prev": null,
            "type": "tag",
            "x-attribsNamespace": Object {
              "fill": undefined,
              "height": undefined,
              "viewBox": undefined,
              "width": undefined,
              "xmlns": "http://www.w3.org/2000/xmlns/",
            },
            "x-attribsPrefix": Object {
              "fill": undefined,
              "height": undefined,
              "viewBox": undefined,
              "width": undefined,
              "xmlns": "",
            },
          },
        ],
        "name": "span",
        "namespace": "http://www.w3.org/1999/xhtml",
        "next": null,
        "parent": [Circular],
        "prev": null,
        "type": "tag",
        "x-attribsNamespace": Object {
          "aria-label": undefined,
          "class": undefined,
          "role": undefined,
        },
        "x-attribsPrefix": Object {
          "aria-label": undefined,
          "class": undefined,
          "role": undefined,
        },
      },
    ],
    "name": "button",
    "namespace": "http://www.w3.org/1999/xhtml",
    "next": null,
    "parent": Node {
      "children": Array [
        [Circular],
      ],
      "name": "root",
      "next": null,
      "parent": null,
      "prev": null,
      "type": "root",
    },
    "prev": null,
    "type": "tag",
    "x-attribsNamespace": Object {
      "class": undefined,
      "style": undefined,
      "type": undefined,
    },
    "x-attribsPrefix": Object {
      "class": undefined,
      "style": undefined,
      "type": undefined,
    },
  },
  "_root": [Circular],
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`FilterPicker when use children, should render it correctly 1`] = `
initialize {
  "0": Node {
    "attribs": Object {
      "class": "",
      "style": "cursor:pointer",
    },
    "children": Array [
      Node {
        "data": "过滤选择器",
        "next": null,
        "parent": [Circular],
        "prev": null,
        "type": "text",
      },
    ],
    "name": "div",
    "namespace": "http://www.w3.org/1999/xhtml",
    "next": null,
    "parent": Node {
      "children": Array [
        [Circular],
      ],
      "name": "root",
      "next": null,
      "parent": null,
      "prev": null,
      "type": "root",
    },
    "prev": null,
    "type": "tag",
    "x-attribsNamespace": Object {
      "class": undefined,
      "style": undefined,
    },
    "x-attribsPrefix": Object {
      "class": undefined,
      "style": undefined,
    },
  },
  "_root": [Circular],
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;
